--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/codemod": "^4.3.0",
     "@material-ui/core": "^4.4.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -17,16 +18,11 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
+  "browserslist": [
       ">0.2%",
       "not dead",
+      "not ie <= 11",
       "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  ],
+      "proxy": "http://172.30.1.12:5000/"
 }
