--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dependencies": {
         "body-parse": "^1.18.3",
         "express": "^4.17.1",
-        "nodemon": "^1.19.2"
+        "yarn": "^1.13.0"
     },
     "devDependencies": {
         "concurrently": "^4.0.1"
