--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/codemod": "^4.3.0",
     "@material-ui/core": "^4.4.2",
+    "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2"
@@ -19,10 +20,10 @@
     "extends": "react-app"
   },
   "browserslist": [
-      ">0.2%",
-      "not dead",
-      "not ie <= 11",
-      "not op_mini all"
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
   ],
-      "proxy": "http://172.30.1.12:5000/"
+  "proxy": "http://172.30.1.12:5000/"
 }
