--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "body-parse": "^1.18.3",
         "express": "^4.17.1",
+        "multer": "^1.4.2",
         "mysql": "^2.17.1",
         "yarn": "^1.13.0"
     },
