--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
+        "@material-ui/icons": "^4.4.1",
         "body-parse": "^1.18.3",
         "express": "^4.17.1",
         "multer": "^1.4.2",
